[tool.poetry]
name = "python-insights"
version = "0.1.0"
description = ""
authors = ["c-Tos1wa <cristoshiwassaki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^4.2.2"
pandas = "^2.2.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
